Creating the "Aside" and "Back" sections (structure and style)

--- a/styles/global.css
+++ b/styles/global.css
@@ -29,5 +29,39 @@
 
   --semantic-erro: #DC2626;
 
+}
 
+body {
+  font: var(--text);
+  color: var(--text-secondary);
+}
+
+h1, h2 {
+  color: var(--text-primary);
+}
+
+img {
+  max-width: 100%;
+}
+
+.container {
+  --max-width: 360px;
+  width: min(var(--max-width), 100% - 2rem * 2);
+  margin-inline: auto;
+}
+
+.desktop-only {
+  display: none;
+}
+
+@media (width >= 80em) {
+  .container {
+    --max-width: 80em;
+    width: min(var(--max-width), 100% - 4rem * 2);
+  margin-inline: auto;
+  }
+
+  .desktop-only {
+    display: initial;
+  }
 }
