--- a/styles/layout.css
+++ b/styles/layout.css
@@ -68,22 +68,25 @@ aside{
   
     & .aside-container {
       max-width: 31rem;
-      border: 1px solid black;
+      /* border: 1px solid black; */
       
-          & header {
-            & img {
-              margin: 0;
-            }
+      & header {
+        & img {
+          margin: 0;
+        }
       
-            & h2 {
-              font: 600 2.5rem/1.25 var(--font-family);
-              margin-block: .5rem 2rem;
-              & span {
-                color: var(--text-highlight);
-              }
-            }
+        & h2 {
+          font: 600 2.5rem/1.25 var(--font-family);
+          margin-block: .5rem;
+          & span {
+            color: var(--text-highlight);
           }
-      
+        }
+
+        & p {
+          margin-bottom: 2rem;
+        }
+      }   
     }
   }
 
