Creating the Address field (structure and style)

--- a/styles/global.css
+++ b/styles/global.css
@@ -23,7 +23,7 @@
 
   --surface-primary: #FFFFFF;
   --surface-secondary: #FEE7D6;
-  --surface-disable: #E7E5E4;
+  --surface-disabled: #E7E5E4;
 
   --stroke-default: #D6D3D1;
   --stroke-highlight: #F3541C;
@@ -54,6 +54,11 @@ img {
 .desktop-only {
   display: none;
 }
+
+.flex {
+  display: flex;
+}
+
 
 @media (width >= 80em) {
   .container {
