--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -50,3 +50,30 @@ input[type="date"] {
 select {
   background: url(../../assets/icons/arrow-down-01.svg) no-repeat calc(100% - 1rem);
 }
+
+.address {
+  #address-col {
+      display: grid;
+      gap: 1.25rem;
+      
+      & .input-wrapper:has([disabled]) {
+        opacity: .5;
+      }
+
+      & input {
+        &[disabled] {
+          background-color: var(--surface-disabled);
+
+          border: 1px solid var(--stroke-default);
+          color: var(--text-primary);
+        }
+      }
+}
+
+@media (width >= 80em) {
+  #address-col {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 1.5rem;
+  }
+}
