--- a/styles/forms.css
+++ b/styles/forms.css
@@ -15,6 +15,10 @@ legend {
   margin-bottom: 1.25rem;
 }
 
+fieldset + fieldset {
+  margin-top: 3rem;
+}
+
 @media (width >= 80em) {
   fieldset {
     gap: 1.5rem;
