--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -51,24 +51,52 @@ select {
   background: url(../../assets/icons/arrow-down-01.svg) no-repeat calc(100% - 1rem);
 }
 
-.address {
-  #address-col {
-      display: grid;
-      gap: 1.25rem;
-      
-      & .input-wrapper:has([disabled]) {
-        opacity: .5;
-      }
-
-      & input {
-        &[disabled] {
-          background-color: var(--surface-disabled);
-
-          border: 1px solid var(--stroke-default);
-          color: var(--text-primary);
-        }
-      }
+#address-col {
+  display: grid;
+  gap: 1.25rem;
 }
+
+.input-wrapper:has([disabled]) {
+  opacity: .5;
+}
+
+input {
+  &[disabled] {
+    background-color: var(--surface-disabled);
+
+    border: 1px solid var(--stroke-default);
+    color: var(--text-primary);
+  }
+
+  &:invalid {
+    border: 0.125rem solid var(--semantic-error);
+  }
+
+  & + small {
+    font: var(--text-sm);
+    color: #78716C;
+
+    display: inline-block;
+    margin-top: .25rem;
+  }
+
+  &[required] + .error {
+    display: flex;
+    align-items: center;
+    gap: .25rem;
+
+    font: var(--text-sm);
+    color: var(--semantic-error);
+
+    margin-top: .25rem;
+  }
+
+  &:not(:focus):valid + .error {
+    display: none;
+  }
+}
+
+
 
 @media (width >= 80em) {
   #address-col {
